--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -5,7 +5,10 @@ $color-primary-two: #d47ae6;
 $color-grey-light-1: #f7f7f7;
 $color-grey-light-2: #eee;
 
+$color-light-grey: #a9a9b3;
 $color-grey-dark: #777;
+$color-almost-black: #292a2d;
+
 $color-white: #fff;
 $color-black: #000;
 
