--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
 //abstracts
 // @import "abstracts/functions";
 // @import "abstracts/mixins";
+@import "abstracts/mixins";
 @import "abstracts/variables";
 
 //base
@@ -10,6 +11,8 @@
 @import "base/utilities";
 
 //components
+@import "components/nav-bar";
+@import "components/button";
 
 //layout
 @import "layout/header";
