--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,37 +1,43 @@
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: "Inter", sans-serif;
+  height: 100vh;
   background-image: url("../resources/rsz_forest.png");
-  //font-family: "Lato", sans-serif;
-  //letter-spacing: 0.13em;
+  background-size: cover;
   /* font-size: 1.6rem; */
   line-height: 1.7;
   color: grey;
-  padding: 3rem;
+  //padding: 3rem;
 }
 
 .heading-primary {
   color: $color-black;
+  padding: 4rem;
+  //   margin-left: 20rem;
 
   backface-visibility: hidden;
   margin-bottom: 6rem;
 
   &--main {
     display: block;
+    font-weight: 800;
     font-size: 6rem;
-    letter-spacing: 0.3rem;
     text-shadow: 2px 2px 2px #aaa;
     color: rgba($color-black, 0.7);
   }
 
   &--sub {
     display: block;
-    font-size: 3rem;
+    font-size: 2.4rem;
+
+    line-height: 1.2;
+    font-weight: 300;
 
     color: rgba($color-black, 0.6);
   }
 
   &--small {
     font-size: 2rem;
+    font-weight: 300;
     color: rgba($color-black, 0.8);
   }
 }
