--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,9 +1,9 @@
-.main_container {
-  width: 30rem;
-  margin: 0 auto;
-  opacity: 0.9;
+// .main_container {
+//   width: 30rem;
+//   margin: 0 auto;
+//   opacity: 0.9;
 
-  a {
-    padding: 1.5rem;
-  }
-}
+//   a {
+//     padding: 1.5rem;
+//   }
+// }
