added icons back & made small improvements to header.

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -7,6 +7,10 @@ $color-grey-light-2: #eee;
 
 $color-light-grey: #a9a9b3;
 $color-grey-dark: #777;
+
+$color-secondary-light: #aed4e74f;
+
+$color-almost-white: #f3f8fb;
 $color-almost-black: #292a2d;
 
 $color-white: #fff;
@@ -14,3 +18,11 @@ $color-black: #000;
 
 //font
 $default-font-size: 1.6rem;
+
+/*
+possible colour variants;
+#e9f7ff
+#e7f2f6
+#F3F8FB
+#d5e3ec
+*/
