--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,9 +1,8 @@
-// .main_container {
-//   width: 30rem;
-//   margin: 0 auto;
-//   opacity: 0.9;
+.section-about {
+}
 
-//   a {
-//     padding: 1.5rem;
-//   }
-// }
+.section-projects {
+}
+
+.section-contact {
+}
