--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,10 @@
+/*
+possible colour variants;
+#e9f7ff
+#e7f2f6
+#F3F8FB
+#d5e3ec
+*/
 *,
 *::after,
 *::before {
@@ -13,33 +20,32 @@ body {
 
 body {
   font-family: "Inter", sans-serif;
-  height: 100vh;
-  background-image: url("../resources/rsz_forest.png");
-  background-size: cover;
-  /* font-size: 1.6rem; */
-  line-height: 1.7;
+  line-height: 1.5;
   color: grey; }
 
 .heading-primary {
   color: #000;
-  padding: 4rem;
+  padding: 2rem 4rem 4rem;
   backface-visibility: hidden;
   margin-bottom: 6rem; }
   .heading-primary--main {
     display: block;
     font-weight: 800;
     font-size: 6rem;
+    line-height: 7rem;
     text-shadow: 2px 2px 2px #aaa;
-    color: rgba(0, 0, 0, 0.7); }
+    color: rgba(41, 42, 45, 0.85); }
   .heading-primary--sub {
     display: block;
-    font-size: 2.4rem;
+    font-size: 2.6rem;
+    margin-left: 0.3rem;
     line-height: 1.2;
-    font-weight: 300;
+    font-weight: 500;
     color: rgba(0, 0, 0, 0.6); }
   .heading-primary--small {
-    font-size: 2rem;
-    font-weight: 300;
+    margin-left: 0.3rem;
+    font-size: 2.3rem;
+    font-weight: 200;
     color: rgba(0, 0, 0, 0.8); }
 
 .heading-secondary {
@@ -47,12 +53,25 @@ body {
   text-transform: uppercase;
   font-weight: 700; }
 
+.u-margin-top-small {
+  margin-top: 2rem; }
+
+.clickable-icon {
+  height: 4.8rem;
+  opacity: 0.8; }
+
 nav {
-  background-color: rgba(169, 169, 179, 0.2); }
+  background: linear-gradient(to right, #f3f8fb, #aed4e74f); }
   nav::after {
     content: "";
     clear: both;
     display: table; }
+
+.nav-shadow {
+  -webkit-box-shadow: 0 2px 4px -2px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: 0 2px 4px -2px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 2px 4px -2px rgba(0, 0, 0, 0.25);
+  position: relative; }
 
 .navigation {
   float: right; }
@@ -71,9 +90,7 @@ nav {
     width: 10rem;
     text-align: center; }
     .navigation__logo-box img {
-      margin-top: 1.5rem;
-      height: 4.8rem;
-      opacity: 0.9; }
+      margin-top: 1.5rem; }
 
 .btn-resume {
   padding: 1rem;
@@ -86,6 +103,27 @@ nav {
   border: 1px solid #292a2d;
   transition: transform 0.5s; }
   .btn-resume:hover {
-    background-color: #fafafb; }
+    background-color: #f3f8fb; }
   .btn-resume:active {
     transform: translateY(0.4rem); }
+
+.header {
+  height: 95vh;
+  background-image: linear-gradient(to right bottom, rgba(243, 248, 251, 0.1), rgba(174, 212, 231, 0.3)), url("../../resources/rsz_forest.png");
+  background-size: cover;
+  background-position: top; }
+  .header__text-box {
+    position: absolute;
+    top: 27%;
+    left: 45%;
+    transform: translate(-50%, -35%); }
+  .header__icon-box {
+    position: absolute;
+    top: 80%;
+    left: 25%;
+    margin-top: 1rem;
+    transform: translate(-60%, -40%); }
+    .header__icon-box li {
+      list-style: none;
+      display: inline-block;
+      margin-left: 3rem; }
