--- a/sass/components/_nav-bar.scss
+++ b/sass/components/_nav-bar.scss
@@ -1,11 +1,21 @@
 nav {
-  background-color: rgba($color-light-grey, 0.2);
+  background: linear-gradient(
+    to right,
+    $color-almost-white,
+    $color-secondary-light
+  );
   @include clearfix;
+}
+
+.nav-shadow {
+  -webkit-box-shadow: 0 2px 4px -2px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: 0 2px 4px -2px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 2px 4px -2px rgba(0, 0, 0, 0.25);
+  position: relative;
 }
 
 .navigation {
   float: right;
-  //list-style: none;
 
   li {
     @include style-link-text($color-almost-black);
@@ -27,9 +37,6 @@ nav {
     text-align: center;
     img {
       margin-top: 1.5rem;
-      height: 4.8rem;
-      opacity: 0.9;
-      //border-radius: 3rem;
     }
   }
 }
