--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,32 +1,34 @@
-// .header {
-//   height: 95vh;
-//   background-image: linear-gradient(
-//       to right bottom,
-//       rgba($color-primary-light, 0.8),
-//       rgba($color-primary-two, 0.9)
-//     ),
-//     url("../resources/rsz_forest.png");
-//   background-size: cover;
-//   background-position: top;
-//   -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-//   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-//   position: relative;
+.header {
+  height: 95vh;
+  background-image: linear-gradient(
+      to right bottom,
+      rgba($color-almost-white, 0.1),
+      rgba($color-secondary-light, 0.3)
+    ),
+    url("../../resources/rsz_forest.png");
+  background-size: cover;
+  background-position: top;
 
-//   &__logo-box {
-//     position: absolute;
-//     top: 4rem;
-//     left: 4rem;
-//   }
+  &__text-box {
+    position: absolute;
+    top: 27%;
+    left: 45%;
+    transform: translate(-50%, -35%);
+  }
 
-//   &__logo {
-//     height: 3.5rem;
-//   }
+  &__icon-box {
+    // margin-top: -7rem;
+    // margin-left: 20rem;
+    position: absolute;
+    top: 80%;
+    left: 25%;
+    margin-top: 1rem;
+    transform: translate(-60%, -40%);
 
-//   &__text-box {
-//     position: absolute;
-//     top: 40%;
-//     left: 50%;
-//     transform: translate(-50%, -50%);
-//     text-align: center;
-//   }
-// }
+    li {
+      list-style: none;
+      display: inline-block;
+      margin-left: 3rem;
+    }
+  }
+}
