--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,7 @@
 @import "base/utilities";
 
 //components
+@import "components/icons";
 @import "components/nav-bar";
 @import "components/button";
 
