--- a/sass/components/_nav-bar.scss
+++ b/sass/components/_nav-bar.scss
@@ -5,6 +5,7 @@ nav {
     $color-secondary-light
   );
   @include clearfix;
+  height: 7rem;
 }
 
 .nav-shadow {
@@ -21,8 +22,9 @@ nav {
     @include style-link-text($color-almost-black);
     display: inline-block;
     padding: 1.3rem;
+    margin-top: 0.4rem;
 
-    font-size: 1.8rem;
+    font-size: 1.6rem;
     font-weight: 500;
     margin-right: 1.5rem;
     cursor: pointer;
@@ -33,10 +35,10 @@ nav {
   }
 
   &__logo-box {
-    width: 10rem;
+    max-width: 10rem;
     text-align: center;
     img {
-      margin-top: 1.5rem;
+      margin-top: 1rem;
     }
   }
 }
