--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@ body {
   color: #000;
   padding: 2rem 4rem 4rem;
   backface-visibility: hidden;
-  margin-bottom: 6rem; }
+  margin-bottom: 5rem; }
   .heading-primary--main {
     display: block;
     font-weight: 800;
@@ -54,7 +54,14 @@ body {
 
 .clickable-icon {
   height: 4.8rem;
-  opacity: 0.8; }
+  opacity: 0.8;
+  padding: 0.05rem; }
+
+.logo-icon {
+  opacity: 0.9; }
+
+.mail-icon {
+  opacity: 0.725; }
 
 nav {
   background: linear-gradient(to right, #f3f8fb, #aed4e74f);
@@ -114,13 +121,13 @@ nav {
     margin-top: 1rem;
     position: absolute;
     top: 27%;
-    left: 45%;
+    left: 50%;
     transform: translate(-50%, -35%); }
   .header__icon-box {
     position: absolute;
-    top: 80%;
-    left: 25%;
-    transform: translate(-60%, -40%); }
+    top: 65%;
+    left: 50%;
+    transform: translate(-70%, -30%); }
     .header__icon-box li {
       list-style: none;
       display: inline-block;
