--- a/sass/_nav-bar.scss
+++ b/sass/_nav-bar.scss
@@ -1,5 +1,5 @@
 nav {
-  background: linear-gradient(
+  background-image: linear-gradient(
     to right,
     $color-almost-white,
     $color-secondary-light
