--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -2,5 +2,5 @@ body {
   font-size: $default-font-size;
   font-family: "Poppins", sans-serif;
   font-weight: 300;
-  background-color: #e9f7ff;
+  background-color: $color-primary-dark-2; //change later
 }
