--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -1,5 +1,65 @@
 .sidebar {
-  background-color: $color-primary;
-  grid-row: 1 / -1;
+  background-color: transparent;
+  grid-row: 1 / 2;
   grid-column: sidebar-start / sidebar-end;
+  padding: 1.5rem 0;
+  z-index: 1;
+
+  // keep fixed on scroll
+  position: sticky;
+  top: 0;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+
+  // page navigation container
+  &__main-container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  // info / contact container
+  &__sub-container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__icon {
+    width: 100%;
+    height: 2.75rem;
+    fill: $color-almost-black;
+    transition: all 0.3s;
+
+    &--profile {
+      height: 2.5rem;
+    }
+
+    &--mail {
+      height: 3rem;
+    }
+
+    &--github {
+      height: 2.5rem;
+    }
+
+    &:hover {
+      fill: lighten($color-almost-black, 25%);
+      transform: scale(1.1);
+    }
+
+    &:active {
+      transform: scale(1.1) translateY(2px);
+    }
+
+    &:focus {
+      outline: none;
+    }
+  }
+}
+
+// spacing between sidebar items
+a {
+  padding: 0.5rem;
 }
