--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -9,6 +9,7 @@
 html {
   //defines what 1 rem represents
   font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -18,13 +19,19 @@ body {
 .container {
   display: grid;
   grid-template-rows: 100vh repeat(5, min-content);
+  //   grid-template-columns:
+  //     [sidebar-start] 6rem [sidebar-end full-start] minmax(6rem, 1fr)
+  //     [content-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end])
+  //     [content-end] minmax(6rem, 1fr) [full-end];
+
+  //without initial sidebar column
   grid-template-columns:
-    [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr)
+    [full-start] minmax(6rem, 1fr)
     [content-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end])
     [content-end] minmax(6rem, 1fr) [full-end];
+}
 
-  //   & > * {
-  //     padding: 3rem;
-  //     font-size: 2rem;
-  //   }
+::selection {
+  background-color: $color-almost-black;
+  color: white;
 }
