--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -12,6 +12,8 @@ $color-pink: #f3b9ff;
 $color-white: #fff;
 $color-black: #000;
 
+$color-default-text: rgba(41, 42, 45, 0.85);
+
 //font
 $default-font-size: 1.6rem;
 
@@ -22,3 +24,6 @@ possible colour variants;
 #F3F8FB
 #d5e3ec
 */
+
+$test-1: #e9f7ff;
+$test-2: #f3f8fb;
