--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ body {
   font-size: 1.6rem;
   font-family: "Inter", sans-serif;
   font-weight: 300;
-  background-color: #e9f7ff; }
+  background-color: #e7eff4; }
 
 .heading--1 {
   font-size: 8rem;
@@ -75,7 +75,8 @@ body {
     width: 100%;
     height: 2.75rem;
     fill: #3a3b40;
-    transition: all 0.4s; }
+    transition: all 0.4s;
+    backface-visibility: hidden; }
     .sidebar__icon--profile {
       height: 2.5rem; }
     .sidebar__icon--mail {
@@ -129,7 +130,8 @@ a {
     width: 4.5rem;
     height: 4.5rem;
     transition: fill 0.4s;
-    animation: up-down 1.5s cubic-bezier(0.65, 0, 0.35, 1) infinite; }
+    animation: up-down 1.5s cubic-bezier(0.65, 0, 0.35, 1) infinite;
+    backface-visibility: hidden; }
     .header__arrow:hover {
       fill: black; }
 
