--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -1,6 +1,5 @@
 .sidebar {
-  //   background-color: rgba($test-1, 0.4);
-
+  background-color: transparent;
   padding: 1.5rem 0;
   z-index: 1;
   width: 6rem;
@@ -15,6 +14,37 @@
   justify-content: space-between;
   align-items: center;
 
+  &__icon {
+    width: 100%;
+    height: 2.75rem;
+    fill: lighten($color-almost-black, 7%);
+    transition: all 0.4s;
+    backface-visibility: hidden;
+    position: relative;
+
+    &--profile {
+      height: 2.5rem;
+      position: relative;
+    }
+
+    &--mail {
+      height: 3rem;
+      margin-top: -0.5rem;
+    }
+
+    &--github {
+      height: 2.5rem;
+    }
+
+    &:active {
+      transform: scale(1.1) translateY(2px);
+    }
+
+    &:focus {
+      outline: none;
+    }
+  }
+
   // page navigation container
   &__main-container {
     display: flex;
@@ -27,42 +57,40 @@
     flex-direction: column;
   }
 
-  &__icon {
-    width: 100%;
-    height: 2.75rem;
-    fill: lighten($color-almost-black, 7%);
-    transition: all 0.4s;
-    backface-visibility: hidden;
+  // navigation icons/text overlap/hover feature
+  &__info {
+    position: relative;
+    transition: all 0.8s;
+    display: flex;
 
-    &--profile {
-      height: 2.5rem;
+    &--text {
+      position: absolute;
+      bottom: 0;
+      transform: translateX(-0.5rem) translateY(-1.5rem);
+      width: 100%;
+      text-shadow: 1px 1px 4px white;
+      text-align: center;
+      font-size: 1.4rem;
+
+      opacity: 0;
     }
 
-    &--mail {
-      height: 3rem;
-      margin-top: -0.5rem;
-    }
-
-    &--github {
-      height: 2.5rem;
-    }
-
+    // icons disappear, text appears on hover
     &:hover {
-      fill: black;
-      transform: scale(1.1);
-    }
+      .sidebar__info--icon {
+        opacity: 0;
+      }
 
-    &:active {
-      transform: scale(1.1) translateY(2px);
-    }
-
-    &:focus {
-      outline: none;
+      .sidebar__info--text {
+        opacity: 1;
+      }
     }
   }
 }
 
-// spacing between sidebar items
+// link styling + spacing for all containers
 a {
   padding: 0.5rem;
+  text-decoration: none;
+  color: $color-almost-black;
 }
