--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -5,6 +5,7 @@ $color-primary-dark-2: #efecea;
 
 $color-almost-white: #f3f8fb;
 $color-almost-black: #292a2d;
+$color-light-gray: #a9a9b3;
 
 $color-yellow: #fcde7c;
 $color-pink: #f3b9ff;
