--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,4 +1,6 @@
 .footer {
-  background-color: rgb(132, 163, 255);
+  background-color: $color-almost-black;
   grid-column: full-start / full-end;
+  padding: 1.5rem 0;
+  border-top: 1px solid whitesmoke;
 }
