--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -8,7 +8,7 @@ body {
 .heading--1 {
   font-size: 8rem;
   font-weight: 400;
-  text-shadow: 2px 2px 8px gray;
+  text-shadow: 2px 2px 6px gray;
   color: $color-default-text;
   z-index: 80;
 }
@@ -17,6 +17,14 @@ body {
 }
 
 .heading--3 {
+}
+
+.heading--4 {
+  font-size: 1.8rem;
+  font-weight: 300;
+  color: $color-light-gray;
+  text-align: center;
+  text-shadow: 1px 1px 16px gray;
 }
 
 // heading text
