--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -1,4 +1,4 @@
 .contact {
-  background-color: yellowgreen;
-  grid-column: content-start / content-end;
+  background-color: lighten(#d5e3ec, 5%);
+  grid-column: full-start / full-end;
 }
