--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -1,5 +1,9 @@
 .u-margin-top-small {
-  margin-top: 2rem;
+  margin-top: 1.5rem;
+}
+
+.u-margin-top-medium {
+  margin-top: 3rem;
 }
 
 .u-margin-bottom-large {
