--- a/css/style.css
+++ b/css/style.css
@@ -32,14 +32,23 @@ body {
   font-size: 1.6rem;
   font-family: "Inter", sans-serif;
   font-weight: 300;
-  background-color: #e7eff4; }
+  background-color: whitesmoke; }
 
 .heading--1 {
   font-size: 8rem;
   font-weight: 400;
   text-shadow: 2px 2px 6px gray;
-  color: rgba(41, 42, 45, 0.85);
-  z-index: 80; }
+  color: rgba(41, 42, 45, 0.85); }
+
+.heading--2 {
+  font-size: 3.5rem;
+  font-weight: 400;
+  color: rgba(41, 42, 45, 0.85); }
+
+.heading--3 {
+  font-size: 2.4rem;
+  font-weight: 300;
+  color: rgba(41, 42, 45, 0.85); }
 
 .heading--4 {
   font-size: 1.8rem;
@@ -56,7 +65,10 @@ body {
   text-shadow: 2px 2px 8px gray; }
 
 .u-margin-top-small {
-  margin-top: 2rem; }
+  margin-top: 1.5rem; }
+
+.u-margin-top-medium {
+  margin-top: 3rem; }
 
 .u-margin-bottom-large {
   margin-bottom: 10rem; }
@@ -155,7 +167,7 @@ a {
     position: absolute;
     z-index: 50;
     bottom: 5%;
-    left: 47.5%;
+    left: 48.5%;
     fill: #3b3d41;
     width: 4.5rem;
     height: 4.5rem;
@@ -187,20 +199,53 @@ a {
     transform: translateY(-1rem); } }
 
 .about {
-  background-color: #c69963;
-  grid-column: content-start / content-end; }
+  background-color: transparent;
+  grid-column: content-start / content-end;
+  padding: 4rem 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
 
 .skills {
-  background-color: #fcde7c;
-  grid-column: content-start / content-end; }
+  background-color: #e7eff4;
+  grid-column: full-start / full-end;
+  text-align: center;
+  padding: 4rem 0; }
+  .skills__whole {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 4rem; }
+  .skills__container {
+    padding: 3rem;
+    background-color: whitesmoke;
+    border-radius: 1rem;
+    width: 60vw; }
+    .skills__container:not(:last-child) {
+      margin-bottom: 2rem; }
+  .skills__flex {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap; }
+  .skills__details {
+    list-style: none;
+    padding: 1rem;
+    width: 10rem; }
+    .skills__details--icon {
+      width: 4rem;
+      height: 4rem; }
+    .skills__details--text {
+      font-size: 1.2rem;
+      font-weight: 400;
+      color: #292a2d; }
 
 .projects {
-  background-color: #f3b9ff;
+  background-color: whitesmoke;
   grid-column: full-start / full-end; }
 
 .contact {
-  background-color: yellowgreen;
-  grid-column: content-start / content-end; }
+  background-color: #e7eff4;
+  grid-column: full-start / full-end; }
 
 .footer {
   background-color: #292a2d;
