--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -2,7 +2,7 @@ body {
   font-size: $default-font-size;
   font-family: "Inter", sans-serif;
   font-weight: 300;
-  background-color: lighten(#d5e3ec, 5%); //change later
+  background-color: whitesmoke;
 }
 
 .heading--1 {
@@ -10,13 +10,18 @@ body {
   font-weight: 400;
   text-shadow: 2px 2px 6px gray;
   color: $color-default-text;
-  z-index: 80;
 }
 
 .heading--2 {
+  font-size: 3.5rem;
+  font-weight: 400;
+  color: $color-default-text;
 }
 
 .heading--3 {
+  font-size: 2.4rem;
+  font-weight: 300;
+  color: $color-default-text;
 }
 
 .heading--4 {
