--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -6,6 +6,10 @@
   margin-top: 3rem;
 }
 
+.u-margin-bottom-very-small {
+  margin-bottom: 1rem;
+}
+
 .u-margin-bottom-large {
   margin-bottom: 10rem;
 }
