--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -1,4 +1,19 @@
 .contact {
-  background-color: lighten(#d5e3ec, 5%);
+  background-color: darken($color-background-2, 2%);
   grid-column: full-start / full-end;
+  z-index: -2;
+
+  & .heading--2 {
+    position: relative;
+    display: inline-block;
+
+    &::after {
+      @include style-after-element(
+        19rem,
+        2.5rem,
+        darken($color-background-2, 0%),
+        white
+      );
+    }
+  }
 }
