--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -1,4 +1,22 @@
 .projects {
   background-color: whitesmoke;
   grid-column: full-start / full-end;
+  z-index: -2;
+  padding: 4rem 2rem;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  & .heading--2 {
+    position: relative;
+    &::after {
+      @include style-after-element(
+        20rem,
+        3rem,
+        darken($color-background-2, 7%),
+        darken($color-background-2, 10%)
+      );
+    }
+  }
 }
