--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -14,6 +14,7 @@ $color-white: #fff;
 $color-black: #000;
 
 $color-default-text: rgba(41, 42, 45, 0.85);
+$color-background-2: #e7eff4;
 
 //font
 $default-font-size: 1.6rem;
