--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ body {
 .sidebar {
   background-color: transparent;
   padding: 1.5rem 0;
-  z-index: 1;
+  z-index: 200;
   width: 6rem;
   height: 100vh;
   position: fixed;
@@ -295,21 +295,78 @@ a {
 .contact {
   background-color: #e0eaf1;
   grid-column: full-start / full-end;
-  z-index: -2; }
-  .contact .heading--2 {
-    position: relative;
-    display: inline-block; }
-    .contact .heading--2::after {
-      content: "";
-      bottom: 0;
-      left: 0;
-      width: 19rem;
-      height: 2.5rem;
-      position: absolute;
-      background-color: #f8fbfc;
-      box-shadow: 0px 0px 10px #fcfcfc;
-      border-radius: 3px;
-      z-index: -1; }
+  z-index: 10; }
+  .contact__container {
+    display: flex;
+    justify-content: center;
+    padding: 6rem; }
+  .contact__text, .contact__form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50%; }
+  .contact__text {
+    align-items: center;
+    margin-left: 6rem; }
+    .contact__text .heading--2 {
+      position: relative;
+      margin-right: 16rem;
+      margin-top: -1rem; }
+      .contact__text .heading--2::after {
+        content: "";
+        bottom: 0;
+        left: 0;
+        width: 19rem;
+        height: 3rem;
+        position: absolute;
+        background-color: #f8fbfc;
+        box-shadow: 0px 0px 10px #fcfcfc;
+        border-radius: 3px;
+        z-index: -1; }
+    .contact__text > p {
+      margin-top: 2rem;
+      width: 55%;
+      font-size: 1.7rem; }
+    .contact__text span {
+      box-shadow: inset 0 -10px 0 white;
+      transition: all 0.4s; }
+      .contact__text span:hover {
+        box-shadow: inset 0 -20px 0 white; }
+  .contact__list {
+    display: flex;
+    list-style: none;
+    margin-top: 2rem; }
+    .contact__list > li {
+      margin-right: 4rem; }
+    .contact__list--icon {
+      width: 3rem;
+      height: 3rem; }
+  .contact__form {
+    margin-right: 10rem; }
+    .contact__form--input {
+      padding: 1.5rem;
+      font-size: 1.6rem;
+      font-family: "Inter", sans-serif;
+      font-weight: 300;
+      width: 100%; }
+      .contact__form--input:not(:last-child) {
+        margin-bottom: 2rem; }
+    .contact__form--label {
+      visibility: hidden; }
+    .contact__form--submit {
+      padding: 1rem 2rem;
+      display: block;
+      font-size: 1.6rem;
+      font-family: "Inter", sans-serif;
+      font-weight: 300;
+      border-radius: 5px;
+      background-color: white;
+      border: 1px solid gray;
+      cursor: pointer;
+      transition: all 0.4s; }
+      .contact__form--submit:hover {
+        background-color: whitesmoke;
+        transform: scale(1.025); }
 
 .footer {
   background-color: #292a2d;
